# ml-lens

./: .gitignore  MANIFEST.in  Readme.md  __init__.py  git_error.txt  pyproject.toml  setup.py
frontend/: package-lock.json  package.json
frontend/components/: CodeBlock.module.css  CodeBlock.tsx  Footer.module.css  Footer.tsx  GuideLayout.module.css  GuideLayout.tsx  Navbar.module.css  Navbar.tsx
frontend/pages/: Home.module.css  _app.tsx  _document.tsx  api-reference.module.css  api-reference.tsx  index.tsx  install.module.css  install.tsx
frontend/pages/examples/: classification.tsx  clustering.tsx  examples.module.css  full-pipeline.tsx  index.tsx  linalg-walkthrough.tsx  regression.tsx
frontend/pages/guide/: config.tsx  index.tsx  lenses.tsx
frontend/styles/: globals.css
linalg/: create.py
math/linalg/: __init__.py  config.py  exceptions.py  prd.md
math/linalg/_internal/: decorators.py
math/linalg/api/: __init__.py  create.py  eigen.py  matmul.py  norms.py  ops.py
math/linalg/backend/: base.py  utils.py
math/linalg/core/: __init__.py  execution_context.py  mode.py  validation.py
math/linalg/diagnostics/: error_analysis.py  rank.py  report.py
math/linalg/registry/: __init__.py
math/linalg/tutorial/: 01_creation.py  02_operations.py  05_solve.py  06_decomposition.py  07_norms_and_eigen.py  09_neural_networks.py  10_execution_and_tracing.py
math/linalg/utils/: __init__.py  block_ops.py
mllense/: __init__.py
mllense/math/: __init__.py
mllense/models/: __init__.py  base.py
src/math/: __init__.py
src/math4ml/: __init__.py
(+227 files in other folders)
